Specify date/date-time in OpenAPI (breaking change)
